📣 Brand manifesto: why UzunYaşa — obesity kills, we help you live longer

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>UzunYaşa | Bilimle Daha Uzun, Daha İyi Yaşam</title>
- <meta name="description" content="Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu. Beslenme, egzersiz, kilo yönetimi ve tedavi seçenekleri hakkında güvenilir bilgi.">
+ <meta name="description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <meta name="keywords" content="sağlıklı yaşam, kilo verme, diyet, egzersiz, GLP-1, obezite tedavisi, uzun yaşam">
  <meta name="author" content="UzunYaşa">
  <meta property="og:title" content="UzunYaşa | Bilimle Daha Uzun, Daha İyi Yaşam">
- <meta property="og:description" content="Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu.">
+ <meta property="og:description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <meta property="og:type" content="website">
  <meta property="og:locale" content="tr_TR">
  <link rel="preconnect" href="https://fonts.googleapis.com">
