--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Hakkımızda | UzunYaşa</title>
+    <meta name="description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -272,7 +273,51 @@
  </div>
  </section>
 
- <section class="content-section alt full">
+ 
+    <!-- NEDEN UZUNYAŞA - MANİFESTO -->
+    <section class="content-section" style="background: linear-gradient(135deg, #195157 0%, #0D7377 100%); color: white; padding: 5rem 2rem;">
+        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+            <p style="color: #E8963E; font-weight: 700; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 1rem;">Manifesto</p>
+            <h2 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 2rem; line-height: 1.2;">Neden UzunYaşa?</h2>
+            
+            <div style="text-align: left; font-size: 1.15rem; line-height: 1.9; opacity: 0.95;">
+                <p style="margin-bottom: 1.5rem;">
+                    Obezite, en sık ölüm nedenlerinin en yaygın risk faktörüdür.
+                </p>
+                <p style="margin-bottom: 1.5rem;">
+                    Kalp hastalığı. Tip 2 diyabet. Kanser. İnme. Dünyanın en çok insan öldüren hastalıklar &mdash; ve hepsinin ortak paydası: obezite. Dünya genelinde her yıl <strong>5 milyondan fazla insan</strong> obeziteyle doğrudan ilişkili hastalıklar nedeniyle hayatını kaybediyor.
+                </p>
+                <p style="margin-bottom: 1.5rem;">
+                    Bu bir estetik meselesi değil. Bu bir yaşam-ölüm meselesi.
+                </p>
+                <p style="margin-bottom: 1.5rem;">
+                    Türkiye'de her 3 yetişkinden biri obez. Her 5 çocuktan biri fazla kilolu. Ve bu rakamlar her yıl artıyor. Ama bu kader değil &mdash; çünkü obezite, önlenebilir ve tedavi edilebilir bir hastalıktır.
+                </p>
+                <p style="margin-bottom: 2rem;">
+                    İsmimiz tesadüf değil. <strong>UzunYasa</strong>, "Live Long" demektir &mdash; çünkü kilo vermek, kelimenin tam anlamıyla hayatınızı uzatır. Araştırmalar, sağlıklı kiloya ulaşan insanların <strong>10-15 yil daha uzun</strong> yaşadığını gösteriyor.
+                </p>
+            </div>
+
+            <div style="background: rgba(255,255,255,0.1); border-radius: 16px; padding: 2.5rem; margin: 2rem 0; backdrop-filter: blur(10px);">
+                <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; font-size: 1.4rem; font-weight: 700;">
+                    <span>Kilo ver</span>
+                    <span style="color: #E8963E; font-size: 1.2rem;">&rarr;</span>
+                    <span>Uzun yaşa</span>
+                    <span style="color: #E8963E; font-size: 1.2rem;">&rarr;</span>
+                    <span>Sağlıklı yaşa</span>
+                    <span style="color: #E8963E; font-size: 1.2rem;">&rarr;</span>
+                    <span>İyi yaşa</span>
+                </div>
+                <p style="margin-top: 1rem; opacity: 0.8; font-size: 0.95rem;">Bu bir slogan değil. Bu bir yol haritası.</p>
+            </div>
+
+            <p style="font-size: 1.15rem; line-height: 1.9; opacity: 0.95; text-align: left;">
+                Biz buradayız çünkü inanıyoruz: Herkes daha uzun, daha sağlıklı ve daha iyi bir yaşamı hak ediyor. Ve bu yolculukta güvenilir, bağımsız, bilimsel bilgiye erişim bir lüks değil &mdash; bir haktır.
+            </p>
+        </div>
+    </section>
+
+    <section class="content-section alt full">
  <div style="max-width: 1200px; margin: 0 auto;">
  <h2 class="section-title" style="text-align: center;">Değerlerimiz</h2>
  <p class="section-subtitle" style="text-align: center; margin-left: auto; margin-right: auto;">Her kararımızı yönlendiren temel ilkeler.</p>
