--- a/pages/tedavi/karsilastirma.html
+++ b/pages/tedavi/karsilastirma.html
@@ -12,7 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>GLP-1 vs ESG vs Cerrahi — Tedavi Karşılaştırma Aracı | UzunYaşa</title>
- <meta name="description" content="GLP-1 ilaçları, Endoskopik Sleeve Gastroplasti (ESG) ve bariatrik cerrahi arasında kanıta dayalı karşılaştırma. Etkinlik, maliyet, riskler ve iyileşme süreleri.">
+ <meta name="description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın. GLP-1, ESG ve bariatrik cerrahi karşılaştırması.">
  <meta name="keywords" content="GLP-1 karşılaştırma, ESG tedavi, bariatrik cerrahi, obezite tedavisi karşılaştırma, kilo verme yöntemleri">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/karsilastirma.html">
  <meta property="og:title" content="GLP-1 vs ESG vs Cerrahi — Tedavi Karşılaştırma Aracı | UzunYaşa">
@@ -545,7 +545,15 @@
  <p>GLP-1 ilaçları, Endoskopik Sleeve Gastroplasti (ESG) ve Bariatrik Cerrahi — kanıta dayalı, tarafsız karşılaştırma.</p>
  </section>
 
- <!-- TABS -->
+ 
+    <!-- BRAND BANNER -->
+    <div style="max-width: 1200px; margin: -1rem auto 0; padding: 0 1.5rem; position: relative; z-index: 3;">
+        <div style="background: linear-gradient(135deg, #195157, #0D7377); color: white; padding: 1.25rem 2rem; border-radius: 12px; text-align: center; font-size: 1.1rem; font-weight: 600; line-height: 1.6;">
+            Obezite tedavisi sadece kilo vermek değil &mdash; hayatınızı uzatmaktır.
+        </div>
+    </div>
+
+    <!-- TABS -->
  <div class="tabs-container">
  <div class="tabs" role="tablist" aria-label="Karşılaştırma boyutları">
  <button class="tab-btn active" role="tab" data-tab="overview" aria-selected="true"> Genel Bakış</button>
