Brand tagline: 10 yıl ekle + evidence page + why this platform exists

--- a/index.html
+++ b/index.html
@@ -1989,15 +1989,23 @@ Beslenme, egzersiz ve tedavi seçenekleri.
 
  
     <!-- MANIFESTO -->
-    <section style="padding:4rem 2rem;background:linear-gradient(180deg,#0f3d42 0%,#195157 100%);text-align:center;position:relative;overflow:hidden;">
+    <section style="padding:5rem 2rem;background:linear-gradient(180deg,#0f3d42 0%,#195157 100%);text-align:center;position:relative;overflow:hidden;">
         <div style="position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 30% 50%, rgba(232,150,62,0.08) 0%, transparent 60%), radial-gradient(ellipse at 70% 30%, rgba(255,255,255,0.03) 0%, transparent 50%);"></div>
-        <div style="max-width:800px;margin:0 auto;position:relative;z-index:1;">
-            <p style="font-family:'Playfair Display',serif;font-size:clamp(1.4rem,3.5vw,2.2rem);color:rgba(255,255,255,0.95);line-height:1.6;font-weight:400;letter-spacing:-0.01em;">
-                Obezite, en sık ölüm nedenlerinin en yaygın risk faktörüdür.
-            </p>
+        <div style="max-width:850px;margin:0 auto;position:relative;z-index:1;">
+            <h2 style="font-family:'Playfair Display',serif;font-size:clamp(1.5rem,3.5vw,2.4rem);color:rgba(255,255,255,0.95);line-height:1.5;font-weight:500;letter-spacing:-0.01em;margin-bottom:1rem;">
+                Fazla kilodan kurtul. Saglikli beslen. Hareket et.<br>
+                <span style="color:var(--accent);font-weight:700;">Hayatina <span style="font-size:1.4em;letter-spacing:-0.02em;">10 yil</span> ekle.</span>
+            </h2>
             <div style="width:60px;height:2px;background:var(--accent);margin:1.5rem auto;"></div>
-            <p style="font-size:clamp(1.1rem,2.5vw,1.5rem);color:var(--accent);font-weight:700;letter-spacing:0.05em;">
-                Kilo ver. Uzun yaşa. Sağlıklı yaşa. İyi yaşa.
+            <p style="font-size:clamp(1rem,2vw,1.25rem);color:rgba(255,255,255,0.75);font-weight:500;margin-bottom:2rem;">
+                Bu bir tahmin degil &mdash; 120.000 kisilik Harvard arastirmasinin sonucu.
+            </p>
+            <p style="font-size:clamp(0.95rem,1.8vw,1.1rem);color:rgba(255,255,255,0.7);line-height:1.8;max-width:650px;margin:0 auto 2.5rem;">
+                Artik bu bilgilere ulasmak eskisi gibi zor degil. Herkes saglikli olabilir. Herkes iyi yasayabilir. Herkes uzun yasayabilir. Bu platform tam bunun icin var.
+            </p>
+            <a href="pages/hakkimizda.html" style="display:inline-block;padding:0.875rem 2rem;background:linear-gradient(135deg,var(--accent) 0%,#D97706 100%);color:white;border-radius:10px;text-decoration:none;font-weight:600;font-size:1rem;transition:all 0.3s;box-shadow:0 4px 20px rgba(232,150,62,0.3);">Sen de uzun yasa</a>
+            <p style="font-size:0.75rem;color:rgba(255,255,255,0.35);margin-top:2.5rem;line-height:1.5;max-width:600px;margin-left:auto;margin-right:auto;">
+                Li Y, et al. Impact of Healthy Lifestyle Factors on Life Expectancies in the US Population. Circulation. 2018;138(4):345-355.
             </p>
         </div>
     </section>
