--- a/pages/bilim.html
+++ b/pages/bilim.html
@@ -11,7 +11,7 @@
 </script>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Bilimsel Yaklaşımımız | UzunYaşa</title>
+ <title>Bilim Ne Diyor? | UzunYaşa</title>
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -417,8 +417,65 @@
  <circle cx="12" cy="12" r="10"/>
  </svg>
  </div>
- <h1>Bilimle Daha Uzun, Daha İyi Yaşam</h1>
- <p>Kanıta dayalı yaklaşımımız, güvenilir kaynaklarımız ve içerik değerlendirme metodolojimiz.</p>
+ <h1>Bilim Ne Diyor?</h1>
+ <p>Saglikli yasam omru gercekten uzatiyor mu? Iste 120.000 kisilik Harvard arastirmasinin sonuclari.</p>
+ </div>
+ </section>
+
+ <!-- EVIDENCE: HARVARD STUDY -->
+ <section class="content-section" style="background: linear-gradient(180deg, #0f3d42 0%, #195157 100%); color: white; padding: 5rem 2rem;">
+ <div style="max-width: 900px; margin: 0 auto;">
+ <div style="text-align: center; margin-bottom: 3rem;">
+ <p style="color: #E8963E; font-weight: 700; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 1rem;">Harvard Arastirmasi (2018)</p>
+ <h2 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; line-height: 1.2;">
+ <span style="color: #E8963E; font-size: 1.3em;">120.000+</span> kisi. <span style="color: #E8963E; font-size: 1.3em;">34</span> yil takip.
+ </h2>
+ <p style="font-size: 1.15rem; opacity: 0.85; max-width: 650px; margin: 0 auto;">5 saglikli yasam faktoru = ortalama 12-14 yil daha uzun omur.</p>
+ </div>
+
+ <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-bottom: 3rem;">
+ <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
+ <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+5-7</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
+ <div style="font-weight: 600;">Saglikli kilo</div>
+ </div>
+ <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
+ <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+3-5</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
+ <div style="font-weight: 600;">Duzenli egzersiz</div>
+ </div>
+ <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
+ <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+3-4</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
+ <div style="font-weight: 600;">Saglikli beslenme</div>
+ </div>
+ <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
+ <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+10</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
+ <div style="font-weight: 600;">Sigara birakmak</div>
+ </div>
+ </div>
+
+ <div style="background: rgba(255,255,255,0.06); border-radius: 16px; padding: 2rem; border: 1px solid rgba(255,255,255,0.1); margin-bottom: 3rem;">
+ <p style="font-size: 1.1rem; line-height: 1.8; opacity: 0.9; text-align: center;">
+ Toplamda 14 yil, ama faktorler birbirini etkiler. Biz muhafazakar kaliyoruz: <strong style="color: #E8963E; font-size: 1.3em;">10 yil</strong>.
+ </p>
+ </div>
+
+ <div style="margin-bottom: 3rem;">
+ <h3 style="font-size: 1.5rem; font-weight: 700; margin-bottom: 1.5rem; text-align: center;">Obezite Neden En Kritik?</h3>
+ <div style="text-align: left; font-size: 1.05rem; line-height: 1.8; opacity: 0.9;">
+ <p style="margin-bottom: 1rem;">Obezite, 1 numarali olum nedeni yuksek tansiyonun, diyabetin ve <strong>13 kanser turunun</strong> ortak risk faktorudur.</p>
+ <p style="margin-bottom: 1rem;"><strong>WHO 2022:</strong> Dunya genelinde 890 milyon obez yetiskin. 2021'de obeziteyle iliskili <strong>3.7 milyon olum</strong>.</p>
+ <p>Bu yuzden saglikli kiloya ulasmak, yasam suresini uzatmanin en etkili yoludur.</p>
+ </div>
+ </div>
+
+ <div style="text-align: center; background: rgba(255,255,255,0.06); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.1);">
+ <p style="font-size: 0.85rem; opacity: 0.6; margin-bottom: 0.5rem;">Kaynak</p>
+ <p style="font-size: 0.9rem; opacity: 0.8; line-height: 1.6;">Li Y, et al. Impact of Healthy Lifestyle Factors on Life Expectancies in the US Population. <em>Circulation.</em> 2018;138(4):345-355. PMID: 29712712</p>
+ <a href="https://pubmed.ncbi.nlm.nih.gov/29712712/" target="_blank" rel="noopener" style="display: inline-block; margin-top: 0.75rem; padding: 0.5rem 1.25rem; background: rgba(232,150,62,0.2); border: 1px solid rgba(232,150,62,0.4); color: #E8963E; border-radius: 8px; text-decoration: none; font-size: 0.85rem; font-weight: 600;">Calismaya Git (PubMed)</a>
+ </div>
  </div>
  </section>
 
