--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -274,46 +274,39 @@
  </section>
 
  
-    <!-- NEDEN UZUNYAŞA - MANİFESTO -->
+    <!-- NEDEN BU SITE VAR? -->
     <section class="content-section" style="background: linear-gradient(135deg, #195157 0%, #0D7377 100%); color: white; padding: 5rem 2rem;">
         <div style="max-width: 800px; margin: 0 auto; text-align: center;">
             <p style="color: #E8963E; font-weight: 700; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 1rem;">Manifesto</p>
-            <h2 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 2rem; line-height: 1.2;">Neden UzunYaşa?</h2>
+            <h2 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 2rem; line-height: 1.2;">Neden Bu Site Var?</h2>
             
             <div style="text-align: left; font-size: 1.15rem; line-height: 1.9; opacity: 0.95;">
                 <p style="margin-bottom: 1.5rem;">
-                    Obezite, en sık ölüm nedenlerinin en yaygın risk faktörüdür.
+                    Saglikli yasam omru <strong style="color:#E8963E;font-size:1.3em;">10 yila</strong> kadar uzatabilir. Bu, bilimin kanitladigi bir gercek.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    Kalp hastalığı. Tip 2 diyabet. Kanser. İnme. Dünyanın en çok insan öldüren hastalıklar &mdash; ve hepsinin ortak paydası: obezite. Dünya genelinde her yıl <strong>5 milyondan fazla insan</strong> obeziteyle doğrudan ilişkili hastalıklar nedeniyle hayatını kaybediyor.
+                    Ama bu bilgiye ulasmak yillarca zor oldu. Karmasik makaleler, celiskili haberler, guvenilmez kaynaklar...
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    Bu bir estetik meselesi değil. Bu bir yaşam-ölüm meselesi.
+                    Artik oyle degil. Teknolojiyle birlikte herkes bu bilgilere ucretsiz, anlasilir ve kanita dayali sekilde ulasabilir.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    Türkiye'de her 3 yetişkinden biri obez. Her 5 çocuktan biri fazla kilolu. Ve bu rakamlar her yıl artıyor. Ama bu kader değil &mdash; çünkü obezite, önlenebilir ve tedavi edilebilir bir hastalıktır.
+                    <strong>UzunYasa tam bunun icin kuruldu:</strong> Turkiye'nin bagimsiz, kanita dayali kilo yonetimi platformu.
                 </p>
-                <p style="margin-bottom: 2rem;">
-                    İsmimiz tesadüf değil. <strong>UzunYasa</strong>, "Live Long" demektir &mdash; çünkü kilo vermek, kelimenin tam anlamıyla hayatınızı uzatır. Araştırmalar, sağlıklı kiloya ulaşan insanların <strong>10-15 yil daha uzun</strong> yaşadığını gösteriyor.
+                <p style="margin-bottom: 1.5rem;">
+                    Herkes saglikli olabilir. Herkes iyi yasayabilir. Herkes uzun yasayabilir.
+                </p>
+                <p style="margin-bottom: 2rem; font-size: 1.3rem; font-weight: 700; color: #E8963E;">
+                    Sen de uzun yasa.
                 </p>
             </div>
 
-            <div style="background: rgba(255,255,255,0.1); border-radius: 16px; padding: 2.5rem; margin: 2rem 0; backdrop-filter: blur(10px);">
-                <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; font-size: 1.4rem; font-weight: 700;">
-                    <span>Kilo ver</span>
-                    <span style="color: #E8963E; font-size: 1.2rem;">&rarr;</span>
-                    <span>Uzun yaşa</span>
-                    <span style="color: #E8963E; font-size: 1.2rem;">&rarr;</span>
-                    <span>Sağlıklı yaşa</span>
-                    <span style="color: #E8963E; font-size: 1.2rem;">&rarr;</span>
-                    <span>İyi yaşa</span>
-                </div>
-                <p style="margin-top: 1rem; opacity: 0.8; font-size: 0.95rem;">Bu bir slogan değil. Bu bir yol haritası.</p>
+            <div style="background: rgba(255,255,255,0.1); border-radius: 16px; padding: 2rem; margin: 2rem 0; backdrop-filter: blur(10px);">
+                <p style="font-size: 0.8rem; color: rgba(255,255,255,0.5); line-height: 1.6;">
+                    Li Y, et al. Impact of Healthy Lifestyle Factors on Life Expectancies in the US Population. Circulation. 2018;138(4):345-355.
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/29712712/" target="_blank" rel="noopener" style="color: rgba(255,255,255,0.6); text-decoration: underline;">PMID: 29712712</a>
+                </p>
             </div>
-
-            <p style="font-size: 1.15rem; line-height: 1.9; opacity: 0.95; text-align: left;">
-                Biz buradayız çünkü inanıyoruz: Herkes daha uzun, daha sağlıklı ve daha iyi bir yaşamı hak ediyor. Ve bu yolculukta güvenilir, bağımsız, bilimsel bilgiye erişim bir lüks değil &mdash; bir haktır.
-            </p>
         </div>
     </section>
 
