Fix Turkish characters (ş, ı, ö, ü, ç, ğ) in recent content

--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -282,22 +282,22 @@
             
             <div style="text-align: left; font-size: 1.15rem; line-height: 1.9; opacity: 0.95;">
                 <p style="margin-bottom: 1.5rem;">
-                    Saglikli yasam omru <strong style="color:#E8963E;font-size:1.3em;">10 yila</strong> kadar uzatabilir. Bu, bilimin kanitladigi bir gercek.
+                    Sağlıklı yaşam ömrü <strong style="color:#E8963E;font-size:1.3em;">10 yıla</strong> kadar uzatabilir. Bu, bilimin kanıtladığı bir gerçek.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    Ama bu bilgiye ulasmak yillarca zor oldu. Karmasik makaleler, celiskili haberler, guvenilmez kaynaklar...
+                    Ama bu bilgiye ulaşmak yıllarca zor oldu. Karmaşık makaleler, çelişkili haberler, güvenilmez kaynaklar...
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    Artik oyle degil. Teknolojiyle birlikte herkes bu bilgilere ucretsiz, anlasilir ve kanita dayali sekilde ulasabilir.
+                    Artık öyle değil. Teknolojiyle birlikte herkes bu bilgilere ücretsiz, anlaşılır ve kanıta dayalı şekilde ulaşabilir.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    <strong>UzunYasa tam bunun icin kuruldu:</strong> Turkiye'nin bagimsiz, kanita dayali kilo yonetimi platformu.
+                    <strong>UzunYaşa tam bunun için kuruldu:</strong> Türkiye'nin bağımsız, kanıta dayalı kilo yönetimi platformu.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    Herkes saglikli olabilir. Herkes iyi yasayabilir. Herkes uzun yasayabilir.
+                    Herkes sağlıklı olabilir. Herkes iyi yaşayabilir. Herkes uzun yaşayabilir.
                 </p>
                 <p style="margin-bottom: 2rem; font-size: 1.3rem; font-weight: 700; color: #E8963E;">
-                    Sen de uzun yasa.
+                    Sen de uzun yaşa.
                 </p>
             </div>
 
