--- a/index.html
+++ b/index.html
@@ -1993,17 +1993,17 @@ Beslenme, egzersiz ve tedavi seçenekleri.
         <div style="position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 30% 50%, rgba(232,150,62,0.08) 0%, transparent 60%), radial-gradient(ellipse at 70% 30%, rgba(255,255,255,0.03) 0%, transparent 50%);"></div>
         <div style="max-width:850px;margin:0 auto;position:relative;z-index:1;">
             <h2 style="font-family:'Playfair Display',serif;font-size:clamp(1.5rem,3.5vw,2.4rem);color:rgba(255,255,255,0.95);line-height:1.5;font-weight:500;letter-spacing:-0.01em;margin-bottom:1rem;">
-                Fazla kilodan kurtul. Saglikli beslen. Hareket et.<br>
-                <span style="color:var(--accent);font-weight:700;">Hayatina <span style="font-size:1.4em;letter-spacing:-0.02em;">10 yil</span> ekle.</span>
+                Fazla kilodan kurtul. Sağlıklı beslen. Hareket et.<br>
+                <span style="color:var(--accent);font-weight:700;">Hayatına <span style="font-size:1.4em;letter-spacing:-0.02em;">10 yıl</span> ekle.</span>
             </h2>
             <div style="width:60px;height:2px;background:var(--accent);margin:1.5rem auto;"></div>
             <p style="font-size:clamp(1rem,2vw,1.25rem);color:rgba(255,255,255,0.75);font-weight:500;margin-bottom:2rem;">
-                Bu bir tahmin degil &mdash; 120.000 kisilik Harvard arastirmasinin sonucu.
+                Bu bir tahmin değil &mdash; 120.000 kişilik Harvard araştırmasının sonucu.
             </p>
             <p style="font-size:clamp(0.95rem,1.8vw,1.1rem);color:rgba(255,255,255,0.7);line-height:1.8;max-width:650px;margin:0 auto 2.5rem;">
-                Artik bu bilgilere ulasmak eskisi gibi zor degil. Herkes saglikli olabilir. Herkes iyi yasayabilir. Herkes uzun yasayabilir. Bu platform tam bunun icin var.
+                Artık bu bilgilere ulaşmak eskisi gibi zor değil. Herkes sağlıklı olabilir. Herkes iyi yaşayabilir. Herkes uzun yaşayabilir. Bu platform tam bunun için var.
             </p>
-            <a href="pages/hakkimizda.html" style="display:inline-block;padding:0.875rem 2rem;background:linear-gradient(135deg,var(--accent) 0%,#D97706 100%);color:white;border-radius:10px;text-decoration:none;font-weight:600;font-size:1rem;transition:all 0.3s;box-shadow:0 4px 20px rgba(232,150,62,0.3);">Sen de uzun yasa</a>
+            <a href="pages/hakkimizda.html" style="display:inline-block;padding:0.875rem 2rem;background:linear-gradient(135deg,var(--accent) 0%,#D97706 100%);color:white;border-radius:10px;text-decoration:none;font-weight:600;font-size:1rem;transition:all 0.3s;box-shadow:0 4px 20px rgba(232,150,62,0.3);">Sen de uzun yaşa</a>
             <p style="font-size:0.75rem;color:rgba(255,255,255,0.35);margin-top:2.5rem;line-height:1.5;max-width:600px;margin-left:auto;margin-right:auto;">
                 Li Y, et al. Impact of Healthy Lifestyle Factors on Life Expectancies in the US Population. Circulation. 2018;138(4):345-355.
             </p>
