--- a/pages/bilim.html
+++ b/pages/bilim.html
@@ -418,7 +418,7 @@
  </svg>
  </div>
  <h1>Bilim Ne Diyor?</h1>
- <p>Saglikli yasam omru gercekten uzatiyor mu? Iste 120.000 kisilik Harvard arastirmasinin sonuclari.</p>
+ <p>Sağlıklı yaşam ömrü gerçekten uzatıyor mu? İşte 120.000 kişilik Harvard araştırmasının sonuçları.</p>
  </div>
  </section>
 
@@ -426,55 +426,55 @@
  <section class="content-section" style="background: linear-gradient(180deg, #0f3d42 0%, #195157 100%); color: white; padding: 5rem 2rem;">
  <div style="max-width: 900px; margin: 0 auto;">
  <div style="text-align: center; margin-bottom: 3rem;">
- <p style="color: #E8963E; font-weight: 700; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 1rem;">Harvard Arastirmasi (2018)</p>
+ <p style="color: #E8963E; font-weight: 700; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 1rem;">Harvard Araştırması (2018)</p>
  <h2 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; line-height: 1.2;">
- <span style="color: #E8963E; font-size: 1.3em;">120.000+</span> kisi. <span style="color: #E8963E; font-size: 1.3em;">34</span> yil takip.
+ <span style="color: #E8963E; font-size: 1.3em;">120.000+</span> kişi. <span style="color: #E8963E; font-size: 1.3em;">34</span> yıl takip.
  </h2>
- <p style="font-size: 1.15rem; opacity: 0.85; max-width: 650px; margin: 0 auto;">5 saglikli yasam faktoru = ortalama 12-14 yil daha uzun omur.</p>
+ <p style="font-size: 1.15rem; opacity: 0.85; max-width: 650px; margin: 0 auto;">5 sağlıklı yaşam faktörü = ortalama 12-14 yıl daha uzun ömür.</p>
  </div>
 
  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-bottom: 3rem;">
  <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
  <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+5-7</div>
- <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
- <div style="font-weight: 600;">Saglikli kilo</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yıl</div>
+ <div style="font-weight: 600;">Sağlıklı kilo</div>
  </div>
  <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
  <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+3-5</div>
- <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
- <div style="font-weight: 600;">Duzenli egzersiz</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yıl</div>
+ <div style="font-weight: 600;">Düzenli egzersiz</div>
  </div>
  <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
  <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+3-4</div>
- <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
- <div style="font-weight: 600;">Saglikli beslenme</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yıl</div>
+ <div style="font-weight: 600;">Sağlıklı beslenme</div>
  </div>
  <div style="background: rgba(255,255,255,0.08); border-radius: 16px; padding: 2rem 1.5rem; text-align: center; border: 1px solid rgba(255,255,255,0.1);">
  <div style="font-size: 2.5rem; font-weight: 800; color: #E8963E; margin-bottom: 0.5rem;">+10</div>
- <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yil</div>
- <div style="font-weight: 600;">Sigara birakmak</div>
+ <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.25rem;">yıl</div>
+ <div style="font-weight: 600;">Sigara bırakmak</div>
  </div>
  </div>
 
  <div style="background: rgba(255,255,255,0.06); border-radius: 16px; padding: 2rem; border: 1px solid rgba(255,255,255,0.1); margin-bottom: 3rem;">
  <p style="font-size: 1.1rem; line-height: 1.8; opacity: 0.9; text-align: center;">
- Toplamda 14 yil, ama faktorler birbirini etkiler. Biz muhafazakar kaliyoruz: <strong style="color: #E8963E; font-size: 1.3em;">10 yil</strong>.
+ Toplamda 14 yıl, ama faktörler birbirini etkiler. Biz muhafazakâr kalıyoruz: <strong style="color: #E8963E; font-size: 1.3em;">10 yıl</strong>.
  </p>
  </div>
 
  <div style="margin-bottom: 3rem;">
  <h3 style="font-size: 1.5rem; font-weight: 700; margin-bottom: 1.5rem; text-align: center;">Obezite Neden En Kritik?</h3>
  <div style="text-align: left; font-size: 1.05rem; line-height: 1.8; opacity: 0.9;">
- <p style="margin-bottom: 1rem;">Obezite, 1 numarali olum nedeni yuksek tansiyonun, diyabetin ve <strong>13 kanser turunun</strong> ortak risk faktorudur.</p>
- <p style="margin-bottom: 1rem;"><strong>WHO 2022:</strong> Dunya genelinde 890 milyon obez yetiskin. 2021'de obeziteyle iliskili <strong>3.7 milyon olum</strong>.</p>
- <p>Bu yuzden saglikli kiloya ulasmak, yasam suresini uzatmanin en etkili yoludur.</p>
+ <p style="margin-bottom: 1rem;">Obezite, 1 numaralı ölüm nedeni yüksek tansiyonun, diyabetin ve <strong>13 kanser türünün</strong> ortak risk faktörüdür.</p>
+ <p style="margin-bottom: 1rem;"><strong>WHO 2022:</strong> Dünya genelinde 890 milyon obez yetişkin. 2021'de obeziteyle ilişkili <strong>3.7 milyon ölüm</strong>.</p>
+ <p>Bu yüzden sağlıklı kiloya ulaşmak, yaşam süresini uzatmanın en etkili yoludur.</p>
  </div>
  </div>
 
  <div style="text-align: center; background: rgba(255,255,255,0.06); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.1);">
  <p style="font-size: 0.85rem; opacity: 0.6; margin-bottom: 0.5rem;">Kaynak</p>
  <p style="font-size: 0.9rem; opacity: 0.8; line-height: 1.6;">Li Y, et al. Impact of Healthy Lifestyle Factors on Life Expectancies in the US Population. <em>Circulation.</em> 2018;138(4):345-355. PMID: 29712712</p>
- <a href="https://pubmed.ncbi.nlm.nih.gov/29712712/" target="_blank" rel="noopener" style="display: inline-block; margin-top: 0.75rem; padding: 0.5rem 1.25rem; background: rgba(232,150,62,0.2); border: 1px solid rgba(232,150,62,0.4); color: #E8963E; border-radius: 8px; text-decoration: none; font-size: 0.85rem; font-weight: 600;">Calismaya Git (PubMed)</a>
+ <a href="https://pubmed.ncbi.nlm.nih.gov/29712712/" target="_blank" rel="noopener" style="display: inline-block; margin-top: 0.75rem; padding: 0.5rem 1.25rem; background: rgba(232,150,62,0.2); border: 1px solid rgba(232,150,62,0.4); color: #E8963E; border-radius: 8px; text-decoration: none; font-size: 0.85rem; font-weight: 600;">Çalışmaya Git (PubMed)</a>
  </div>
  </div>
  </section>
