Add brand slogan: Türkiye uzun yaşasın diye

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>UzunYaşa | Bilimle Daha Uzun, Daha İyi Yaşam</title>
- <meta name="description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
+ <meta name="description" content="Türkiye uzun yaşasın diye. Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <meta name="keywords" content="sağlıklı yaşam, kilo verme, diyet, egzersiz,GLP-1, obezite tedavisi, uzun yaşam">
  <meta name="author" content="UzunYaşa">
  <meta property="og:title" content="UzunYaşa | Bilimle Daha Uzun, Daha İyi Yaşam">
- <meta property="og:description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
+ <meta property="og:description" content="Türkiye uzun yaşasın diye. Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <meta property="og:type" content="website">
  <meta property="og:locale" content="tr_TR">
  <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1975,6 +1975,7 @@
  <span class="tagline-static">Yaşa</span>
  </h1>
  <div class="hero-separator"></div>
+ <p style="font-family:'Playfair Display',serif;font-size:1.1rem;font-weight:300;font-style:italic;opacity:0.75;letter-spacing:0.02em;margin-bottom:1.5rem;">Türkiye uzun yaşasın diye.</p>
  <p class="hero-description">
  Kanıta dayalı, bağımsız sağlık rehberliği.<br>
 Beslenme, egzersiz ve tedavi seçenekleri.
@@ -2633,6 +2634,7 @@ Beslenme, egzersiz ve tedavi seçenekleri.
  <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-large">
  </a>
  <p class="footer-tagline">"Bilimle daha uzun, daha iyi yaşam"</p>
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.6;margin-top:0.25rem;">Türkiye uzun yaşasın diye.</p>
  <div class="footer-badges">
  <span>Bağımsız</span>
  <span>•</span>
