--- a/pages/egzersiz/esneklik-mobilite.html
+++ b/pages/egzersiz/esneklik-mobilite.html
@@ -315,6 +315,7 @@
  <div class="footer-brand">
  <a href="../../index.html"><img src="../../images/logo-white.svg" alt="UzunYaşa" class="footer-logo"></a>
  <p>Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu.</p>
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.6;margin-top:0.25rem;">Türkiye uzun yaşasın diye.</p>
  </div>
  <div class="footer-col">
  <h4>Keşfet</h4>
