--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -258,6 +258,7 @@
  <div class="mission-grid">
  <div class="mission-content">
  <p style="color:#E8963E;font-weight:600;font-size:0.85rem;text-transform:uppercase;letter-spacing:1px;margin-bottom:0.5rem;">Misyonumuz</p>
+ <p style="font-family:'Playfair Display',serif;font-size:1.5rem;font-weight:400;font-style:italic;color:#195157;margin-bottom:1rem;letter-spacing:0.01em;">Türkiye uzun yaşasın diye.</p>
  <h2>Türkiye'nin Bağımsız, Kanıta Dayalı Kilo Yönetimi Platformu</h2>
  <p>UzunYaşa, sağlık bilgisinin ticari çıkarlardan bağımsız, bilimsel kanıtlara dayalı ve herkes için anlaşılır olması gerektiğine inanır.</p>
  <p>Amacımız, insanların kendi sağlıkları hakkında bilinçli kararlar vermelerine yardımcı olmak. Ne satıyoruz, ne de sponsor alıyoruz. Sadece bilim konuşuyoruz.</p>
@@ -774,6 +775,7 @@
  <img src="../images/logo-white.svg" alt="UzunYaşa" class="footer-logo">
  </a>
  <p>Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu.</p>
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.6;margin-top:0.25rem;">Türkiye uzun yaşasın diye.</p>
  </div>
  <div class="footer-col">
  <h4>Keşfet</h4>
