--- a/pages/blog.html
+++ b/pages/blog.html
@@ -498,6 +498,7 @@
  <footer class="footer">
  <div class="footer-inner">
  <img src="../images/logo-white.svg" alt="UzunYaşa" class="footer-logo">
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p>
  <p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p>
  </div>
  </footer>
