--- a/pages/rehberler/evde-egzersiz.html
+++ b/pages/rehberler/evde-egzersiz.html
@@ -133,6 +133,6 @@
  <a href="../test.html" class="cta-btn">Teste Başla →</a>
  </div>
  </main>
- <footer><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
+ <footer><p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
 </body>
 </html>
