--- a/pages/rehberler/kalori-acigi.html
+++ b/pages/rehberler/kalori-acigi.html
@@ -351,7 +351,7 @@
  </aside>
  </div>
 
- <footer>
+ <footer><p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p>
  <p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p>
  </footer>
 
