--- a/pages/rehberler/plato-kirma.html
+++ b/pages/rehberler/plato-kirma.html
@@ -187,6 +187,6 @@
  </div>
  </main>
 
- <footer><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
+ <footer><p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
 </body>
 </html>
