--- a/pages/tesekkurler.html
+++ b/pages/tesekkurler.html
@@ -41,7 +41,8 @@
  </div>
  </main>
 
- <footer>
+ <footer style="text-align:center;padding:2rem;">
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p>
  <p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p>
  </footer>
 </body>
